@startuml
'https://plantuml.com/state-diagram

hide empty description

state "regular instantiated" as regularInstantiated
state "instantiated from record" as instantiatedFromRecord
state "game start" as gameStart
state win
state lose

[*] --> regularInstantiated
[*] --> instantiatedFromRecord 

regularInstantiated --> gameStart : first click
instantiatedFromRecord --> gameStart : first click

gameStart --> gameStart : judge result survived
gameStart --> win : judge result win
gameStart --> lose : judge result lose

win --> [*]
lose --> [*]

@enduml